# Quran-asr-nemo

./: .gitignore  CACHE_AWARE_STREAMING_GUIDE.md  CHECKPOINT_CONVERSION_EXPLAINED.md  EVALUATION_BREAKTHROUGH.md  EVALUATION_README.md  FINETUNE_MULTILINGUAL.md  FOLDER_NAVIGATION_ALGORITHM.md  MODELS_OVERVIEW.md  QUICKSTART_STREAMING_APP.md  QUICK_REFERENCE.md  README.md  SETUP.md  STREAMING_APP_GUIDE.md  STREAMING_COMPARISON.md  STREAMING_FRAMEWORK_SUMMARY.md  STREAMING_IMPACT_MEASUREMENT.md  STREAMING_PARAMETERS_VERIFIED.md  STREAMING_VS_NONSTREAMING_EXPLAINED.md  TRAINING_GUIDE.md  TRAINING_OPTIMIZATION_GUIDE.md  app_gradio_asr.py  app_streaming_comparison.py  convert_ckpt_to_nemo.py  convert_model_to_streaming.py  diagnose_issues.py  download_arabic_model.sh  evaluate.py  evaluate_best_model.py  evaluate_hybrid_decoders.py  evaluate_model.py  evaluate_non_streaming_only.py  evaluate_quran_streaming.py  evaluate_streaming_contexts.py  evaluate_streaming_impact.py  finetune_multilingual_simple.py  finetune_multilingual_streaming.py  finetune_multilingual_streaming_hydra.py  finetune_quran_asr.py  finetune_with_custom_tokenizer.py  inspect_predictions.py  (+19 more)
configs/: quran_finetune.yaml
inference/: stream_asr_vad_gradio.py
nemo_scripts/: __init__.py  fastconformer_ctc_bpe_streaming_quran.yaml  fastconformer_hybrid_transducer_ctc_bpe_streaming.yaml  finetune_config.yaml  finetune_config_custom_tokenizer.yaml  finetune_config_streaming_custom_tokenizer.yaml  finetune_streaming_custom_tokenizer.yaml  speech_to_text_cache_aware_streaming_infer.py  speech_to_text_eval.py  (+1 more)
(+20 files in other folders)
